src/objects/Teacher__c.object
<CustomObject>
    <fields>
        <fullName>College__c</fullName>
        <label>College</label>
        <referenceTo>College__c</referenceTo>
        <relationshipLabel>Teachers</relationshipLabel>
        <relationshipName>Teachers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Experience__c</fullName>
        <label>Experience</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Teacher</label>
    <nameField>
        <label>Teacher Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Teachers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>